# exohunter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  LICENSE  METHODOLOGY.md  ML_GUIDE.md  README.md  THEORY.md  VERIFICATION_GUIDE.md  pyproject.toml  requirements.txt
data/: datasets_sources.json
exohunter/: __init__.py  alerts.py  config.py
exohunter/catalog/: __init__.py  candidates.py  crossmatch.py  export.py
exohunter/classification/: __init__.py  cnn.py  datasets.py  features.py  model.py
exohunter/dashboard/: __init__.py  app.py  callbacks.py  figures.py  layouts.py  overview.py
exohunter/detection/: __init__.py  bls.py  model.py  validator.py
exohunter/ingestion/: __init__.py  cache.py  downloader.py
exohunter/preprocessing/: __init__.py  clean.py  detrend.py  normalize.py  pipeline.py
exohunter/utils/: __init__.py  logging.py  parallel.py  timing.py
notebooks/: 00_lecture_introduction.ipynb  01_exploratory.ipynb  02_student_exercises.ipynb  03_verification.ipynb
scripts/: demo_single_star.py  download_training_data.py  inspect_candidate.py  run_batch.py  run_dashboard.py  run_pipeline.py  train_classifier.py  train_cnn.py
tests/: conftest.py  test_alerts.py  test_bls.py  test_cache.py  test_catalog.py  test_classification.py  test_cnn.py  test_dashboard.py  test_export.py  test_gpu_bls.py  test_model.py  test_overview.py  test_preprocessing.py  test_utils.py  test_validator.py
