[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exohunter"
version = "0.1.0"
description = "Concurrent exoplanet transit detection pipeline for NASA TESS data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ExoHunter Team — UFPB" },
]
keywords = ["exoplanet", "transit", "TESS", "astronomy", "BLS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "lightkurve>=2.4",
    "astropy>=6.0",
    "astroquery>=0.4",
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.59",
    "pandas>=2.1",
    "dash>=2.14",
    "plotly>=5.18",
    "dash-bootstrap-components>=1.5",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
cnn = [
    "torch>=2.0",
]

[project.urls]
Repository = "https://github.com/exohunter-ufpb/exohunter"

[tool.setuptools.packages.find]
include = ["exohunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
